# util-linux-cal

./: Cargo.toml  LICENSE  README.md  README_ru.md
.github/workflows/: rust.yml
plugins/holiday_highlighter/: Cargo.toml  README.md  README_ru.md
plugins/holiday_highlighter/src/: lib.rs
plugins/holiday_highlighter/tests/: integration_tests.rs  unit_tests.rs
src/: args.rs  calendar.rs  formatter.rs  lib.rs  main.rs  plugin_api.rs  types.rs
tests/: integration_tests.rs  unit_tests.rs
