[package]
name = "cal"
version = "0.1.0"
edition = "2024"
description = "Calendar display utility"
authors = ["Se.Cherkasov@yahoo.com"]


[dependencies]
chrono = { version = "0.4.43", features = ["unstable-locales"] }
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"
terminal_size = "0.4"
libloading = { version = "0.9", optional = true }
shellexpand = { version = "3.1", optional = true }
libc = { version = "0.2", optional = true }

[features]
plugins = ["dep:libloading", "dep:shellexpand", "dep:libc"]
default = ["plugins"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[workspace]
members = [
    "plugins/holiday_highlighter",
]
