[package]
name = "holiday_highlighter"
version = "0.1.0"
edition = "2024"
description = "Holiday highlighting plugin for cal using isdayoff.ru API"

[lib]
crate-type = ["cdylib", "rlib"]
name = "holiday_highlighter"

[dependencies]
chrono = { version = "0.4.43", features = ["unstable-locales"] }
ureq = "2.12"
libc = "0.2"
